# ETL_service

./: .gitignore  CSV2_ежечасная выгрузка на сайт измененных карточек.csv  Dockerfile  docker-compose.yml  donload.py  main.py  pyproject.toml  requirements.txt  worker.py
core/: settings.py
etl_1c/: views.py
etl_kaspi/: __init__.py  models.py  utilites.py  views.py
etl_obtaining_kaspi_seller_position/: schemas.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  utilites.py  views.py
