[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
requests = {extras = ["socks"], version = "^2.32.3"}
pydantic-settings = "^2.3.4"
black = "^24.4.2"
redis = ">=4.2.0"
aiohttp = "^3.11.12"
aiohttp-socks = "^0.10.1"
curl-cffi = "^0.9.0"
undetected-chromedriver = "^3.5.5"
selenium = "^4.29.0"
pika = "^1.3.2"
aio-pika = "^9.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
